# chromium-base-clip

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_mt_win32.bat  generate_mt_win64.bat  generate_win32.bat  generate_win64.bat
base/: CMakeLists.txt  auto_thread.cc  auto_thread.h  auto_thread_task_runner.cc  auto_thread_task_runner.h  file_version_info_win.cc  generated_build_date.h  gtest_prod_util.h  ini_parser.h  logging.cc
base/debug/: activity_tracker_unittest.cc  debugging_buildflags.h  stack_trace_win.cc
base/memory/: scoped_refptr.h
base/numerics/: safe_conversions_impl.h
base/process/: launch_win.cc  process.h  process_iterator_win.cc  process_win.cc
base/synchronization/: synchronization_buildflags.h
base/task_scheduler/: can_schedule_sequence_observer.h  task_tracker.cc
base/testing/gtest/include/gtest/: gtest_prod.h
base/threading/: thread_restrictions.h
base/time/: time_win.cc
base/unittest/: CMakeLists.txt  main.cpp
base/win/: scoped_windows_thread_environment.h  win_util.cc
